--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,6 @@
 [mod-name]
-title=YOUR MOD TITLE
+title=TEST MOD
 
 [mod-description]
-description=YOUR MOD DESCRIPTION
+description=This is only for learning and testing to work with the structure of Factorio API . To make in future mods for the great game with correct lizensing
+
